--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<title> </Hi> </title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:900i" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Niconne" rel="stylesheet">
 </head>
 <body class="bg-image">
-
-	<h1 class="text"> Mingina </h1>
-	<div><h3 class="text"> Says hi!</h3></div>
+<div class="img"><img src="src/brownskin.jpg" alt="Queen" style="width: 100px; height: 100px;"> </div>
+	<h1 class="text"> Mingina N. </h1>
+	<div>
+	<button type="button" class="btn btn-primary text btn-lg btn-block">Say hi!</button>
+	</div>
 
 </body>
 </html>
