new design for the website

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
-
 <!DOCTYPE html>
-<html>
-<head>
-	<title> </Hi> </title>
+<html lang="en">
+	<head>
+	 	
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Title Page</title>
 
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body class="bg-image">
-<div class="img"><img src="src/brownskin.jpg" alt="Queen" style="width: 100px; height: 100px;"> </div>
-	<h1 class="text"> Mingina N. </h1>
-	<div>
-	<button type="button" class="btn btn-primary text btn-lg btn-block">Say hi!</button>
-	</div>
+		<!-- Bootstrap CSS -->
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		
+	</head>
+	<body>
+		<h1 class="text-xs-center">Hello World</h1>
 
-</body>
+		<!-- jQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<!-- Bootstrap javascript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	</body>
 </html>
